{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 25,
  "lineage": "162b1ebd-322c-962c-b9dd-8cc86e9acd93",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "f5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a6b7d5bbf48539c",
            "association_id": "eipassoc-00afed61875bed888",
            "domain": "vpc",
            "id": "eipalloc-06a6b7d5bbf48539c",
            "instance": "i-03cc353881fc1a4b3",
            "network_border_group": "us-west-2",
            "network_interface": "eni-09b8cf00c568d7e12",
            "private_dns": "ip-10-0-0-200.us-west-2.compute.internal",
            "private_ip": "10.0.0.200",
            "public_dns": "ec2-52-36-188-172.us-west-2.compute.amazonaws.com",
            "public_ip": "52.36.188.172",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.f5",
            "aws_key_pair.demo",
            "aws_security_group.f5",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.password",
            "tls_private_key.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "f5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ae9af26d2e96786",
            "arn": "arn:aws:ec2:us-west-2:250871914685:instance/i-03cc353881fc1a4b3",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03cc353881fc1a4b3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "terraform-20240326024829478000000001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09b8cf00c568d7e12",
            "private_dns": "ip-10-0-0-200.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.200",
            "public_dns": "ec2-54-188-229-77.us-west-2.compute.amazonaws.com",
            "public_ip": "54.188.229.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 240,
                "kms_key_id": "arn:aws:kms:us-west-2:250871914685:key/a8c14b72-bb53-40db-ae94-fab1f445cf7b",
                "throughput": 0,
                "volume_id": "vol-036a122f03b6f4812",
                "volume_size": 80,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0deafb05155c9ae73",
            "tags": {
              "Env": "scs",
              "Name": "scs-f5"
            },
            "tags_all": {
              "Env": "scs",
              "Name": "scs-f5"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-042725e604b2322da"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo",
            "aws_security_group.f5",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.password",
            "tls_private_key.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "f5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:250871914685:security-group/sg-042725e604b2322da",
            "description": "Allow inbound SSH and HTTPS traffic from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042725e604b2322da",
            "ingress": [
              {
                "cidr_blocks": [
                  "1.1.1.1/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "1.1.1.1/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "1.1.1.1/32"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "scs-f5",
            "name_prefix": "",
            "owner_id": "250871914685",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05c7b4739c71ef0b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:250871914685:network-acl/acl-037c443ef51b3351b",
            "default_network_acl_id": "acl-037c443ef51b3351b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-037c443ef51b3351b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "250871914685",
            "subnet_ids": [
              "subnet-0c6a374eb086d4dfe",
              "subnet-0deafb05155c9ae73"
            ],
            "tags": {
              "Name": "scs-vpc-default"
            },
            "tags_all": {
              "Name": "scs-vpc-default"
            },
            "vpc_id": "vpc-05c7b4739c71ef0b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:250871914685:route-table/rtb-05805ee3a668198b3",
            "default_route_table_id": "rtb-05805ee3a668198b3",
            "id": "rtb-05805ee3a668198b3",
            "owner_id": "250871914685",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "scs-vpc-default"
            },
            "tags_all": {
              "Name": "scs-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-05c7b4739c71ef0b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:250871914685:security-group/sg-001a674528779d266",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-001a674528779d266",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "250871914685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "scs-vpc-default"
            },
            "tags_all": {
              "Name": "scs-vpc-default"
            },
            "vpc_id": "vpc-05c7b4739c71ef0b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce9b3a257a5c3c8c",
            "domain": "vpc",
            "id": "eipalloc-0ce9b3a257a5c3c8c",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-35-38-89.us-west-2.compute.amazonaws.com",
            "public_ip": "52.35.38.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "scs-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "scs-vpc-us-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:250871914685:internet-gateway/igw-09b8baff4900a3937",
            "id": "igw-09b8baff4900a3937",
            "owner_id": "250871914685",
            "tags": {
              "Name": "scs-vpc"
            },
            "tags_all": {
              "Name": "scs-vpc"
            },
            "vpc_id": "vpc-05c7b4739c71ef0b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce9b3a257a5c3c8c",
            "association_id": "eipassoc-0bbbc0ac65614667e",
            "connectivity_type": "public",
            "id": "nat-067e26900fe867d70",
            "network_interface_id": "eni-04d15965f155e1c9c",
            "private_ip": "10.0.0.209",
            "public_ip": "52.35.38.89",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0deafb05155c9ae73",
            "tags": {
              "Name": "scs-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "scs-vpc-us-west-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-035a8084673430c1b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-067e26900fe867d70",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-035a8084673430c1b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09b8baff4900a3937",
            "id": "r-rtb-0c88d44ca16c75b411080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c88d44ca16c75b41",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:250871914685:route-table/rtb-035a8084673430c1b",
            "id": "rtb-035a8084673430c1b",
            "owner_id": "250871914685",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "scs-vpc-private-us-west-2a"
            },
            "tags_all": {
              "Name": "scs-vpc-private-us-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c7b4739c71ef0b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:250871914685:route-table/rtb-0c88d44ca16c75b41",
            "id": "rtb-0c88d44ca16c75b41",
            "owner_id": "250871914685",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "scs-vpc-public"
            },
            "tags_all": {
              "Name": "scs-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c7b4739c71ef0b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed6254485d9357ad",
            "route_table_id": "rtb-035a8084673430c1b",
            "subnet_id": "subnet-0c6a374eb086d4dfe"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9c7a2e25818f10a",
            "route_table_id": "rtb-0c88d44ca16c75b41",
            "subnet_id": "subnet-0deafb05155c9ae73"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:250871914685:subnet/subnet-0c6a374eb086d4dfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6a374eb086d4dfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250871914685",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scs-vpc-private-us-west-2a"
            },
            "tags_all": {
              "Name": "scs-vpc-private-us-west-2a"
            },
            "vpc_id": "vpc-05c7b4739c71ef0b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:250871914685:subnet/subnet-0deafb05155c9ae73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0deafb05155c9ae73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250871914685",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scs-vpc-public-us-west-2a"
            },
            "tags_all": {
              "Name": "scs-vpc-public-us-west-2a"
            },
            "vpc_id": "vpc-05c7b4739c71ef0b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:250871914685:vpc/vpc-05c7b4739c71ef0b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-037c443ef51b3351b",
            "default_route_table_id": "rtb-05805ee3a668198b3",
            "default_security_group_id": "sg-001a674528779d266",
            "dhcp_options_id": "dopt-017a9d89daf7d840f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05c7b4739c71ef0b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05805ee3a668198b3",
            "owner_id": "250871914685",
            "tags": {
              "Name": "scs-vpc"
            },
            "tags_all": {
              "Name": "scs-vpc"
            }
          }
        }
      ]
    }
  ]
}